@@ -1,7 +1,7 @@
 //
 // Environment_WIN32.cpp
 //
-// $Id: //poco/1.4/Foundation/src/Environment_WIN32.cpp#2 $
+// $Id: //poco/1.4/Foundation/src/Environment_WIN32.cpp#3 $
 //
 // Library: Foundation
 // Package: Core
@@ -108,6 +108,8 @@ std::string EnvironmentImpl::osDisplayNameImpl()
 			return "Windows Vista/Server 2008";
 		case 1:
 			return "Windows 7/Server 2008 SP2";
+		case 2:
+			return "Windows 8/Server 2012";
 		default:
 			return "Unknown";
 		}
