@@ -12,6 +12,7 @@ AAAIntroduction
   - fixed SF# 603: count() is missing in HashMap
   - Crypto and NetSSL_OpenSSL project files now use OpenSSL *MD.lib library files for 
     static_md builds. Previously, the DLL import libs were used.
+  - Poco::Environment::osDisplayName() now recognized Windows 8/Server 2012
 
 
 !!!Release 1.4.5
